# virtual-occp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: app.js  index.html  style.css
manager-assets/: app.js  index.html  style.css
src/: api.rs  assets.rs  cli.rs  frame.rs  lib.rs  main.rs  manager.rs  manager_web.rs  sse.rs  state.rs  station.rs  web.rs
src/ocpp/: mod.rs  v16.rs  v201.rs
tests/: integration_boot.rs
